dataset1235/2025-2/2318198438/users/867892000/executions/2601575092_291286518.log
== RUN (2025-08-12 17:33:56)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(""))
var = num*2

# Impressao do dobro do numero
print(var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
2468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
11356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 17:34:04)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(""))
var = num*2

# Impressao do dobro do numero
print(var)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
2468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
11356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
22
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 17:33:51)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(""))
var = num*2

# Impressao do dobro do numero
print(var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
2468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
11356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 17:33:18)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int((input(""))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 4
    num = int((input(""))
             ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 4
    num = int((input(""))
             ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 4
    num = int((input(""))
             ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 4
    num = int((input(""))
             ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 4
    num = int((input(""))
             ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
